--- a/trunk/Chameleon.cbp
+++ b/trunk/Chameleon.cbp
@@ -273,13 +273,11 @@
 		<Unit filename="Chameleon.rc">
 			<Option compilerVar="WINDRES" />
 		</Unit>
-		<Unit filename="common/ChameleonPrintout.cpp" />
 		<Unit filename="common/CommonHeaders.h" />
 		<Unit filename="common/Crc16.cpp" />
 		<Unit filename="common/Crc16.h" />
 		<Unit filename="common/DebugEvent.cpp" />
 		<Unit filename="common/DebugEvent.h" />
-		<Unit filename="common/NumeRePrintout.h" />
 		<Unit filename="common/Options.h" />
 		<Unit filename="common/ProjectInfo.cpp" />
 		<Unit filename="common/ProjectInfo.h" />
@@ -290,9 +288,6 @@
 		<Unit filename="common/filewatcher.cpp" />
 		<Unit filename="common/filewatcher.hpp" />
 		<Unit filename="common/fixvsbug.h" />
-		<Unit filename="common/globals.hpp" />
-		<Unit filename="common/numeredroptarget.cpp" />
-		<Unit filename="common/numeredroptarget.hpp" />
 		<Unit filename="common/options.cpp" />
 		<Unit filename="common/recycler.cpp" />
 		<Unit filename="common/recycler.hpp" />
@@ -301,74 +296,83 @@
 		<Unit filename="common/tree_util.h" />
 		<Unit filename="common/verinfo.cpp" />
 		<Unit filename="common/verinfo.h" />
-		<Unit filename="common/wx.cpp" />
-		<Unit filename="common/wx.h" />
-		<Unit filename="compiler/compiler.cpp" />
-		<Unit filename="compiler/compiler.h" />
-		<Unit filename="compiler/compilerevent.cpp" />
-		<Unit filename="compiler/compilerevent.h" />
-		<Unit filename="debugger/DebugManager.cpp" />
-		<Unit filename="debugger/DebugManager.h" />
-		<Unit filename="debugger/cham_db.cpp" />
-		<Unit filename="debugger/cham_db.h" />
-		<Unit filename="debugger/debugviewer.cpp" />
-		<Unit filename="debugger/debugviewer.hpp" />
-		<Unit filename="editor/editor.cpp" />
-		<Unit filename="editor/editor.h" />
-		<Unit filename="editor/history.cpp" />
-		<Unit filename="editor/history.hpp" />
-		<Unit filename="gui/Chameleon.cpp" />
-		<Unit filename="gui/ChameleonNotebook.cpp" />
 		<Unit filename="gui/ChameleonProjectManager.cpp" />
 		<Unit filename="gui/ChameleonProjectManager.h" />
 		<Unit filename="gui/DirTraverser.cpp" />
 		<Unit filename="gui/DirTraverser.hpp" />
 		<Unit filename="gui/IconManager.cpp" />
 		<Unit filename="gui/IconManager.h" />
+		<Unit filename="gui/NumeReNotebook.cpp" />
 		<Unit filename="gui/NumeReNotebook.h" />
+		<Unit filename="gui/NumeReWindow.cpp" />
 		<Unit filename="gui/NumeReWindow.h" />
 		<Unit filename="gui/dialogs/AboutChameleonDialog.cpp" />
 		<Unit filename="gui/dialogs/AboutChameleonDialog.h" />
 		<Unit filename="gui/dialogs/AddVariableWatch.cpp" />
 		<Unit filename="gui/dialogs/AddVariableWatch.h" />
-		<Unit filename="gui/dialogs/CompilerOutputPanel.cpp" />
-		<Unit filename="gui/dialogs/CompilerOutputPanel.h" />
 		<Unit filename="gui/dialogs/OptionsDialog.cpp" />
 		<Unit filename="gui/dialogs/OptionsDialog.h" />
 		<Unit filename="gui/dialogs/RemoteFileDialog.cpp" />
 		<Unit filename="gui/dialogs/RemoteFileDialog.h" />
 		<Unit filename="gui/dialogs/VariableWatchPanel.cpp" />
 		<Unit filename="gui/dialogs/VariableWatchPanel.h" />
+		<Unit filename="gui/dialogs/debugviewer.cpp" />
+		<Unit filename="gui/dialogs/debugviewer.hpp" />
 		<Unit filename="gui/dialogs/duplicatecodedialog.cpp" />
 		<Unit filename="gui/dialogs/duplicatecodedialog.hpp" />
 		<Unit filename="gui/dialogs/fndrpldialog.cpp" />
 		<Unit filename="gui/dialogs/fndrpldialog.hpp" />
 		<Unit filename="gui/dialogs/tipdialog.cpp" />
 		<Unit filename="gui/dialogs/tipdialog.hpp" />
-		<Unit filename="gui/dialogs/treelistctrl.cpp">
-			<Option target="Debug" />
-			<Option target="Release" />
-			<Option target="Profiling" />
-		</Unit>
-		<Unit filename="gui/dialogs/treelistctrl.h">
-			<Option target="Debug" />
-			<Option target="Release" />
-			<Option target="Profiling" />
-		</Unit>
+		<Unit filename="gui/dialogs/treelistctrl.cpp" />
+		<Unit filename="gui/dialogs/treelistctrl.h" />
 		<Unit filename="gui/dialogs/wxTermContainer.cpp" />
 		<Unit filename="gui/dialogs/wxTermContainer.h" />
+		<Unit filename="gui/editor/NumeRePrintout.cpp" />
+		<Unit filename="gui/editor/NumeRePrintout.h" />
+		<Unit filename="gui/editor/editor.cpp" />
+		<Unit filename="gui/editor/editor.h" />
+		<Unit filename="gui/editor/history.cpp" />
+		<Unit filename="gui/editor/history.hpp" />
 		<Unit filename="gui/filetree.cpp" />
 		<Unit filename="gui/filetree.hpp" />
+		<Unit filename="gui/globals.hpp" />
 		<Unit filename="gui/graphviewer.cpp" />
 		<Unit filename="gui/graphviewer.hpp" />
 		<Unit filename="gui/helpviewer.cpp" />
 		<Unit filename="gui/helpviewer.hpp" />
 		<Unit filename="gui/imagepanel.cpp" />
 		<Unit filename="gui/imagepanel.hpp" />
+		<Unit filename="gui/numeredroptarget.cpp" />
+		<Unit filename="gui/numeredroptarget.hpp" />
 		<Unit filename="gui/tableeditpanel.cpp" />
 		<Unit filename="gui/tableeditpanel.hpp" />
 		<Unit filename="gui/tableviewer.cpp" />
 		<Unit filename="gui/tableviewer.hpp" />
+		<Unit filename="gui/terminal/LocalProcessManager.cpp" />
+		<Unit filename="gui/terminal/LocalProcessManager.h" />
+		<Unit filename="gui/terminal/PipedProcess.cpp" />
+		<Unit filename="gui/terminal/PipedProcess.h" />
+		<Unit filename="gui/terminal/TextManager.cpp" />
+		<Unit filename="gui/terminal/TextManager.h" />
+		<Unit filename="gui/terminal/actions.cpp" />
+		<Unit filename="gui/terminal/gtelnet.cpp" />
+		<Unit filename="gui/terminal/gtelnet.hpp" />
+		<Unit filename="gui/terminal/gterm.cpp" />
+		<Unit filename="gui/terminal/gterm.hpp" />
+		<Unit filename="gui/terminal/keytrans.cpp" />
+		<Unit filename="gui/terminal/networking.cpp" />
+		<Unit filename="gui/terminal/networking.h" />
+		<Unit filename="gui/terminal/plinkconnect.cpp" />
+		<Unit filename="gui/terminal/plinkconnect.h" />
+		<Unit filename="gui/terminal/states.cpp" />
+		<Unit filename="gui/terminal/utils.cpp" />
+		<Unit filename="gui/terminal/vt52_states.cpp" />
+		<Unit filename="gui/terminal/winmesgbeep.cpp" />
+		<Unit filename="gui/terminal/wxssh.cpp" />
+		<Unit filename="gui/terminal/wxssh.h" />
+		<Unit filename="gui/terminal/wxterm.cpp" />
+		<Unit filename="gui/terminal/wxterm.h" />
 		<Unit filename="gui/textsplashscreen.hpp" />
 		<Unit filename="gui/viewerbook.cpp" />
 		<Unit filename="gui/viewerbook.hpp" />
@@ -376,13 +380,9 @@
 		<Unit filename="gui/viewerframe.hpp" />
 		<Unit filename="gui/viewerpanel.cpp" />
 		<Unit filename="gui/viewerpanel.hpp" />
+		<Unit filename="gui/wx.cpp" />
+		<Unit filename="gui/wx.h" />
 		<Unit filename="gui/wxProportionalSplitterWindow.h" />
-		<Unit filename="gui/wxssh.cpp" />
-		<Unit filename="gui/wxssh.h" />
-		<Unit filename="gui/wxterm.cpp" />
-		<Unit filename="gui/wxterm.h" />
-		<Unit filename="kernel/core/BasicExcel.cpp" />
-		<Unit filename="kernel/core/BasicExcel.hpp" />
 		<Unit filename="kernel/core/IgorLib/CrossPlatformFileIO.cpp" />
 		<Unit filename="kernel/core/IgorLib/CrossPlatformFileIO.h" />
 		<Unit filename="kernel/core/IgorLib/IgorBin.h" />
@@ -411,107 +411,186 @@
 		<Unit filename="kernel/core/ParserLib/muParserTokenReader.h" />
 		<Unit filename="kernel/core/built-in.cpp" />
 		<Unit filename="kernel/core/built-in.hpp" />
-		<Unit filename="kernel/core/cache.cpp" />
-		<Unit filename="kernel/core/cache.hpp" />
-		<Unit filename="kernel/core/datafile.cpp" />
-		<Unit filename="kernel/core/datafile.hpp" />
-		<Unit filename="kernel/core/debugger.cpp" />
-		<Unit filename="kernel/core/debugger.hpp" />
-		<Unit filename="kernel/core/define.cpp" />
-		<Unit filename="kernel/core/define.hpp" />
-		<Unit filename="kernel/core/doc_helper.cpp" />
-		<Unit filename="kernel/core/doc_helper.hpp" />
-		<Unit filename="kernel/core/documentation.cpp" />
-		<Unit filename="kernel/core/documentation.hpp" />
-		<Unit filename="kernel/core/error.cpp" />
-		<Unit filename="kernel/core/error.hpp" />
+		<Unit filename="kernel/core/datamanagement/cache.cpp" />
+		<Unit filename="kernel/core/datamanagement/cache.hpp" />
+		<Unit filename="kernel/core/datamanagement/datafile.cpp" />
+		<Unit filename="kernel/core/datamanagement/datafile.hpp" />
+		<Unit filename="kernel/core/documentation/doc_helper.cpp" />
+		<Unit filename="kernel/core/documentation/doc_helper.hpp" />
+		<Unit filename="kernel/core/documentation/documentation.cpp" />
+		<Unit filename="kernel/core/documentation/documentation.hpp" />
 		<Unit filename="kernel/core/filesystem.cpp" />
 		<Unit filename="kernel/core/filesystem.hpp" />
-		<Unit filename="kernel/core/fitcontroller.cpp" />
-		<Unit filename="kernel/core/fitcontroller.hpp" />
-		<Unit filename="kernel/core/functionimplementation.cpp" />
-		<Unit filename="kernel/core/functionimplementation.hpp" />
-		<Unit filename="kernel/core/graph_helper.cpp" />
-		<Unit filename="kernel/core/graph_helper.hpp" />
-		<Unit filename="kernel/core/language.cpp" />
-		<Unit filename="kernel/core/language.hpp" />
-		<Unit filename="kernel/core/loop.cpp" />
-		<Unit filename="kernel/core/loop.hpp" />
-		<Unit filename="kernel/core/main.cpp">
-			<Option target="&lt;{~None~}&gt;" />
-		</Unit>
-		<Unit filename="kernel/core/matrixoperations.cpp" />
-		<Unit filename="kernel/core/odesolver.cpp" />
-		<Unit filename="kernel/core/odesolver.hpp" />
+		<Unit filename="kernel/core/maths/define.cpp" />
+		<Unit filename="kernel/core/maths/define.hpp" />
+		<Unit filename="kernel/core/maths/fitcontroller.cpp" />
+		<Unit filename="kernel/core/maths/fitcontroller.hpp" />
+		<Unit filename="kernel/core/maths/functionimplementation.cpp" />
+		<Unit filename="kernel/core/maths/functionimplementation.hpp" />
+		<Unit filename="kernel/core/maths/matrixoperations.cpp" />
+		<Unit filename="kernel/core/maths/odesolver.cpp" />
+		<Unit filename="kernel/core/maths/odesolver.hpp" />
+		<Unit filename="kernel/core/maths/parser_functions.cpp" />
+		<Unit filename="kernel/core/maths/parser_functions.hpp" />
+		<Unit filename="kernel/core/maths/resampler.cpp" />
+		<Unit filename="kernel/core/maths/resampler.h" />
+		<Unit filename="kernel/core/maths/spline.h" />
 		<Unit filename="kernel/core/output.cpp" />
 		<Unit filename="kernel/core/output.hpp" />
-		<Unit filename="kernel/core/parser_functions.cpp" />
-		<Unit filename="kernel/core/parser_functions.hpp" />
-		<Unit filename="kernel/core/plotdata.cpp" />
-		<Unit filename="kernel/core/plotdata.hpp" />
-		<Unit filename="kernel/core/plotinfo.hpp" />
-		<Unit filename="kernel/core/plotting.cpp" />
-		<Unit filename="kernel/core/plotting.hpp" />
+		<Unit filename="kernel/core/plotting/graph_helper.cpp" />
+		<Unit filename="kernel/core/plotting/graph_helper.hpp" />
+		<Unit filename="kernel/core/plotting/plotdata.cpp" />
+		<Unit filename="kernel/core/plotting/plotdata.hpp" />
+		<Unit filename="kernel/core/plotting/plotinfo.hpp" />
+		<Unit filename="kernel/core/plotting/plotting.cpp" />
+		<Unit filename="kernel/core/plotting/plotting.hpp" />
 		<Unit filename="kernel/core/plugin.cpp" />
 		<Unit filename="kernel/core/plugin.hpp" />
 		<Unit filename="kernel/core/plugin_histogram.cpp" />
 		<Unit filename="kernel/core/plugin_random.cpp" />
 		<Unit filename="kernel/core/plugin_statistics.cpp" />
 		<Unit filename="kernel/core/plugins.hpp" />
-		<Unit filename="kernel/core/procedure.cpp" />
-		<Unit filename="kernel/core/procedure.hpp" />
-		<Unit filename="kernel/core/procedureelement.cpp" />
-		<Unit filename="kernel/core/procedureelement.hpp" />
-		<Unit filename="kernel/core/procedurelibrary.cpp" />
-		<Unit filename="kernel/core/procedurelibrary.hpp" />
-		<Unit filename="kernel/core/procedurevarfactory.cpp" />
-		<Unit filename="kernel/core/procedurevarfactory.hpp" />
-		<Unit filename="kernel/core/resampler.cpp" />
-		<Unit filename="kernel/core/resampler.h" />
+		<Unit filename="kernel/core/procedure/debugger.cpp" />
+		<Unit filename="kernel/core/procedure/debugger.hpp" />
+		<Unit filename="kernel/core/procedure/loop.cpp" />
+		<Unit filename="kernel/core/procedure/loop.hpp" />
+		<Unit filename="kernel/core/procedure/procedure.cpp" />
+		<Unit filename="kernel/core/procedure/procedure.hpp" />
+		<Unit filename="kernel/core/procedure/procedureelement.cpp" />
+		<Unit filename="kernel/core/procedure/procedureelement.hpp" />
+		<Unit filename="kernel/core/procedure/procedurelibrary.cpp" />
+		<Unit filename="kernel/core/procedure/procedurelibrary.hpp" />
+		<Unit filename="kernel/core/procedure/procedurevarfactory.cpp" />
+		<Unit filename="kernel/core/procedure/procedurevarfactory.hpp" />
 		<Unit filename="kernel/core/script.cpp" />
 		<Unit filename="kernel/core/script.hpp" />
 		<Unit filename="kernel/core/settings.cpp" />
 		<Unit filename="kernel/core/settings.hpp" />
-		<Unit filename="kernel/core/spline.h" />
 		<Unit filename="kernel/core/stringparsing.cpp" />
 		<Unit filename="kernel/core/structures.hpp" />
-		<Unit filename="kernel/core/tinyxml2.cpp" />
-		<Unit filename="kernel/core/tinyxml2.h" />
-		<Unit filename="kernel/core/tools.cpp" />
-		<Unit filename="kernel/core/tools.hpp" />
-		<Unit filename="kernel/core/unzip.cpp" />
-		<Unit filename="kernel/core/unzip.h" />
+		<Unit filename="kernel/core/ui/error.cpp" />
+		<Unit filename="kernel/core/ui/error.hpp" />
+		<Unit filename="kernel/core/ui/language.cpp" />
+		<Unit filename="kernel/core/ui/language.hpp" />
+		<Unit filename="kernel/core/utils/BasicExcel.cpp" />
+		<Unit filename="kernel/core/utils/BasicExcel.hpp" />
+		<Unit filename="kernel/core/utils/tinyxml2.cpp" />
+		<Unit filename="kernel/core/utils/tinyxml2.h" />
+		<Unit filename="kernel/core/utils/tools.cpp" />
+		<Unit filename="kernel/core/utils/tools.hpp" />
+		<Unit filename="kernel/core/utils/unzip.cpp" />
+		<Unit filename="kernel/core/utils/unzip.h" />
+		<Unit filename="kernel/core/utils/zip++.cpp" />
+		<Unit filename="kernel/core/utils/zip++.hpp" />
+		<Unit filename="kernel/core/utils/zip.cpp" />
+		<Unit filename="kernel/core/utils/zip.h" />
 		<Unit filename="kernel/core/version.h" />
-		<Unit filename="kernel/core/zip++.cpp" />
-		<Unit filename="kernel/core/zip++.hpp" />
-		<Unit filename="kernel/core/zip.cpp" />
-		<Unit filename="kernel/core/zip.h" />
 		<Unit filename="kernel/debugmessenger.cpp" />
 		<Unit filename="kernel/debugmessenger.hpp" />
 		<Unit filename="kernel/kernel.cpp" />
 		<Unit filename="kernel/kernel.hpp" />
 		<Unit filename="kernel/syntax.cpp" />
 		<Unit filename="kernel/syntax.hpp" />
-		<Unit filename="network/LocalProcessManager.cpp" />
-		<Unit filename="network/LocalProcessManager.h" />
-		<Unit filename="network/PipedProcess.cpp" />
-		<Unit filename="network/PipedProcess.h" />
-		<Unit filename="network/TextManager.cpp" />
-		<Unit filename="network/TextManager.h" />
-		<Unit filename="network/actions.cpp" />
-		<Unit filename="network/gtelnet.cpp" />
-		<Unit filename="network/gtelnet.hpp" />
-		<Unit filename="network/gterm.cpp" />
-		<Unit filename="network/gterm.hpp" />
-		<Unit filename="network/keytrans.cpp" />
-		<Unit filename="network/networking.cpp" />
-		<Unit filename="network/networking.h" />
-		<Unit filename="network/plinkconnect.cpp" />
-		<Unit filename="network/plinkconnect.h" />
-		<Unit filename="network/states.cpp" />
-		<Unit filename="network/utils.cpp" />
-		<Unit filename="network/vt52_states.cpp" />
-		<Unit filename="network/winmesgbeep.cpp" />
+		<Unit filename="network/LocalProcessManager.cpp">
+			<Option target="Release_dynamic" />
+			<Option target="Debug_dynamic" />
+			<Option target="Profiling" />
+		</Unit>
+		<Unit filename="network/LocalProcessManager.h">
+			<Option target="Release_dynamic" />
+			<Option target="Debug_dynamic" />
+			<Option target="Profiling" />
+		</Unit>
+		<Unit filename="network/PipedProcess.cpp">
+			<Option target="Release_dynamic" />
+			<Option target="Debug_dynamic" />
+			<Option target="Profiling" />
+		</Unit>
+		<Unit filename="network/PipedProcess.h">
+			<Option target="Release_dynamic" />
+			<Option target="Debug_dynamic" />
+			<Option target="Profiling" />
+		</Unit>
+		<Unit filename="network/TextManager.cpp">
+			<Option target="Release_dynamic" />
+			<Option target="Debug_dynamic" />
+			<Option target="Profiling" />
+		</Unit>
+		<Unit filename="network/TextManager.h">
+			<Option target="Release_dynamic" />
+			<Option target="Debug_dynamic" />
+			<Option target="Profiling" />
+		</Unit>
+		<Unit filename="network/actions.cpp">
+			<Option target="Release_dynamic" />
+			<Option target="Debug_dynamic" />
+			<Option target="Profiling" />
+		</Unit>
+		<Unit filename="network/gtelnet.cpp">
+			<Option target="Release_dynamic" />
+			<Option target="Debug_dynamic" />
+			<Option target="Profiling" />
+		</Unit>
+		<Unit filename="network/gtelnet.hpp">
+			<Option target="Release_dynamic" />
+			<Option target="Debug_dynamic" />
+			<Option target="Profiling" />
+		</Unit>
+		<Unit filename="network/gterm.cpp">
+			<Option target="Release_dynamic" />
+			<Option target="Debug_dynamic" />
+			<Option target="Profiling" />
+		</Unit>
+		<Unit filename="network/gterm.hpp">
+			<Option target="Release_dynamic" />
+			<Option target="Debug_dynamic" />
+			<Option target="Profiling" />
+		</Unit>
+		<Unit filename="network/keytrans.cpp">
+			<Option target="Release_dynamic" />
+			<Option target="Debug_dynamic" />
+			<Option target="Profiling" />
+		</Unit>
+		<Unit filename="network/networking.cpp">
+			<Option target="Release_dynamic" />
+			<Option target="Debug_dynamic" />
+			<Option target="Profiling" />
+		</Unit>
+		<Unit filename="network/networking.h">
+			<Option target="Release_dynamic" />
+			<Option target="Debug_dynamic" />
+			<Option target="Profiling" />
+		</Unit>
+		<Unit filename="network/plinkconnect.cpp">
+			<Option target="Release_dynamic" />
+			<Option target="Debug_dynamic" />
+			<Option target="Profiling" />
+		</Unit>
+		<Unit filename="network/plinkconnect.h">
+			<Option target="Release_dynamic" />
+			<Option target="Debug_dynamic" />
+			<Option target="Profiling" />
+		</Unit>
+		<Unit filename="network/states.cpp">
+			<Option target="Release_dynamic" />
+			<Option target="Debug_dynamic" />
+			<Option target="Profiling" />
+		</Unit>
+		<Unit filename="network/utils.cpp">
+			<Option target="Release_dynamic" />
+			<Option target="Debug_dynamic" />
+			<Option target="Profiling" />
+		</Unit>
+		<Unit filename="network/vt52_states.cpp">
+			<Option target="Release_dynamic" />
+			<Option target="Debug_dynamic" />
+			<Option target="Profiling" />
+		</Unit>
+		<Unit filename="network/winmesgbeep.cpp">
+			<Option target="Release_dynamic" />
+			<Option target="Debug_dynamic" />
+			<Option target="Profiling" />
+		</Unit>
 		<Extensions>
 			<code_completion />
 			<envvars />
