--- a/trunk/Chameleon.rc
+++ b/trunk/Chameleon.rc
@@ -26,7 +26,7 @@
 
 
 // CODE FUER DAS ICON
-IDI_APPICON ICON "gui/icon.ico"
+IDI_APPICON ICON "gui/icons/icon.ico"
 
 //
 // TO CHANGE VERSION INFORMATION, EDIT PROJECT OPTIONS...
