--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -16,6 +16,7 @@
 		<Build>
 			<Target title="Debug">
 				<Option output="../../../Software/NumeRe/numere" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="../../../Software/NumeRe/." />
 				<Option object_output="Debug" />
 				<Option type="0" />
 				<Option compiler="tdm-gcc" />
