--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -416,6 +416,8 @@
 		<Unit filename="kernel/core/datamanagement/cache.hpp" />
 		<Unit filename="kernel/core/datamanagement/datafile.cpp" />
 		<Unit filename="kernel/core/datamanagement/datafile.hpp" />
+		<Unit filename="kernel/core/datamanagement/table.cpp" />
+		<Unit filename="kernel/core/datamanagement/table.hpp" />
 		<Unit filename="kernel/core/documentation/doc_helper.cpp" />
 		<Unit filename="kernel/core/documentation/doc_helper.hpp" />
 		<Unit filename="kernel/core/documentation/documentation.cpp" />
@@ -436,6 +438,8 @@
 		<Unit filename="kernel/core/maths/resampler.cpp" />
 		<Unit filename="kernel/core/maths/resampler.h" />
 		<Unit filename="kernel/core/maths/spline.h" />
+		<Unit filename="kernel/core/maths/wavelet.cpp" />
+		<Unit filename="kernel/core/maths/wavelet.hpp" />
 		<Unit filename="kernel/core/output.cpp" />
 		<Unit filename="kernel/core/output.hpp" />
 		<Unit filename="kernel/core/plotting/graph_helper.cpp" />
