--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -416,6 +416,8 @@
 		<Unit filename="kernel/core/datamanagement/cache.hpp" />
 		<Unit filename="kernel/core/datamanagement/datafile.cpp" />
 		<Unit filename="kernel/core/datamanagement/datafile.hpp" />
+		<Unit filename="kernel/core/datamanagement/dataops.cpp" />
+		<Unit filename="kernel/core/datamanagement/dataops.hpp" />
 		<Unit filename="kernel/core/datamanagement/table.cpp" />
 		<Unit filename="kernel/core/datamanagement/table.hpp" />
 		<Unit filename="kernel/core/documentation/doc_helper.cpp" />
@@ -424,6 +426,10 @@
 		<Unit filename="kernel/core/documentation/documentation.hpp" />
 		<Unit filename="kernel/core/filesystem.cpp" />
 		<Unit filename="kernel/core/filesystem.hpp" />
+		<Unit filename="kernel/core/io/fileops.cpp" />
+		<Unit filename="kernel/core/io/fileops.hpp" />
+		<Unit filename="kernel/core/io/output.cpp" />
+		<Unit filename="kernel/core/io/output.hpp" />
 		<Unit filename="kernel/core/maths/define.cpp" />
 		<Unit filename="kernel/core/maths/define.hpp" />
 		<Unit filename="kernel/core/maths/fitcontroller.cpp" />
@@ -440,8 +446,6 @@
 		<Unit filename="kernel/core/maths/spline.h" />
 		<Unit filename="kernel/core/maths/wavelet.cpp" />
 		<Unit filename="kernel/core/maths/wavelet.hpp" />
-		<Unit filename="kernel/core/output.cpp" />
-		<Unit filename="kernel/core/output.hpp" />
 		<Unit filename="kernel/core/plotting/graph_helper.cpp" />
 		<Unit filename="kernel/core/plotting/graph_helper.hpp" />
 		<Unit filename="kernel/core/plotting/plotdata.cpp" />
