--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -420,6 +420,8 @@
 		<Unit filename="kernel/core/datamanagement/datafile.hpp" />
 		<Unit filename="kernel/core/datamanagement/dataops.cpp" />
 		<Unit filename="kernel/core/datamanagement/dataops.hpp" />
+		<Unit filename="kernel/core/datamanagement/memory.cpp" />
+		<Unit filename="kernel/core/datamanagement/memory.hpp" />
 		<Unit filename="kernel/core/datamanagement/table.cpp" />
 		<Unit filename="kernel/core/datamanagement/table.hpp" />
 		<Unit filename="kernel/core/documentation/doc_helper.cpp" />
