--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -323,8 +323,6 @@
 		<Unit filename="gui/dialogs/OptionsDialog.h" />
 		<Unit filename="gui/dialogs/RemoteFileDialog.cpp" />
 		<Unit filename="gui/dialogs/RemoteFileDialog.h" />
-		<Unit filename="gui/dialogs/VariableWatchPanel.cpp" />
-		<Unit filename="gui/dialogs/VariableWatchPanel.h" />
 		<Unit filename="gui/dialogs/debugviewer.cpp" />
 		<Unit filename="gui/dialogs/debugviewer.hpp" />
 		<Unit filename="gui/dialogs/duplicatecodedialog.cpp" />
@@ -339,6 +337,8 @@
 		<Unit filename="gui/dialogs/tipdialog.hpp" />
 		<Unit filename="gui/dialogs/treelistctrl.cpp" />
 		<Unit filename="gui/dialogs/treelistctrl.h" />
+		<Unit filename="gui/dialogs/variableviewer.cpp" />
+		<Unit filename="gui/dialogs/variableviewer.hpp" />
 		<Unit filename="gui/dialogs/wxTermContainer.cpp" />
 		<Unit filename="gui/dialogs/wxTermContainer.h" />
 		<Unit filename="gui/documentationbrowser.cpp" />
